--- a/views/home.ejs
+++ b/views/home.ejs
@@ -116,8 +116,9 @@
             slides[index].style.opacity = 1;   // show next
         }, 3000);
     </script>
-    
+
 
 </body>
 
 </html>
+<h1 style="color:red;text-align:center;">HELLO UPDATED</h1>
