--- a/views/home.ejs
+++ b/views/home.ejs
@@ -122,3 +122,7 @@
 
 </html>
 <h1 style="color:red;text-align:center;">HELLO UPDATED</h1>
+<div style="background:black;color:white;font-size:30px;text-align:center;">
+    LIVE UPDATE CHECK
+  </div>
+  
