fix test inside body

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -118,11 +118,15 @@
     </script>
 
 
+    <div style="background:black;color:white;font-size:30px;text-align:center;">
+      LIVE UPDATE CHECK
+    </div>
+    
+    <!-- rest of your page -->
+    
+  
+    
+
 </body>
 
 </html>
-<h1 style="color:red;text-align:center;">HELLO UPDATED</h1>
-<div style="background:black;color:white;font-size:30px;text-align:center;">
-    LIVE UPDATE CHECK
-  </div>
-  
