--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Crystal Choco Store</title>
+    <h1 style="color:red;text-align:center;">HELLO UPDATED</h1>
+
 
     <!-- MOBILE VIEWPORT (MUST) -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
