--- a/views/products.ejs
+++ b/views/products.ejs
@@ -89,7 +89,7 @@
   </div>
 
   <!-- CATEGORY TABS -->
-  <div class="flex gap-2 mb-6 flex-wrap">
+  <div class="flex gap-3 mb-4 overflow-x-auto whitespace-nowrap pb-2">
     <% categories.forEach(c => { %>
       <a href="/products?category=<%= c.id %>"
         class="px-4 py-2 rounded-xl shadow
@@ -107,7 +107,7 @@
     <% products.forEach(p => { %>
       <div class="bg-white p-4 rounded-2xl shadow">
 
-        <div class="h-40 bg-gray-50 flex items-center justify-center rounded-lg">
+        <div class="h-44 bg-gray-50 flex items-center justify-center rounded-xl">
           <img src="<%= p.image %>" class="h-full object-contain">
         </div>
 
