--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -31,7 +31,7 @@
             <!-- DETAILS -->
             <div class="flex-1 flex flex-col gap-1">
               <span class="font-semibold text-lg"><%= it.categoryName %></span>
-              <span class="text-blue-700 font-medium">Carton: <%= it.cartoon_size %></span>
+              <span class="text-blue-700 font-medium">Carton Size: <%= it.cartoon_size %></span>
               <span class="text-purple-700 font-medium">Pieces: <%= it.totalPieces %></span>
               <span>Price: ₹ <%= it.price %> / piece</span>
 
