--- a/views/admin_product_form.ejs
+++ b/views/admin_product_form.ejs
@@ -61,7 +61,7 @@
       <div>
         <label class="block font-semibold text-gray-700 mb-1">Description</label>
         <textarea name="description" rows="4"
-          class="border p-3 w-full rounded-lg focus:ring-2 focus:ring-blue-400"
+        class="mt-5 text-gray-700 leading-7 space-y-1 text-[15px]"
           placeholder="Write product details..."></textarea>
       </div>
 
