--- a/views/products.ejs
+++ b/views/products.ejs
@@ -102,10 +102,13 @@
   </div>
 
   <!-- PRODUCTS GRID -->
-  <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
+ <!-- PRODUCTS GRID -->
+<div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
 
-    <% products.forEach(p => { %>
-      <div class="bg-white p-4 rounded-2xl shadow">
+  <% products.forEach(p => { %>
+
+    <a href="/product/<%= p.id %>" class="block">
+      <div class="bg-white p-4 rounded-2xl shadow hover:shadow-lg transition">
 
         <div class="h-44 bg-gray-50 flex items-center justify-center rounded-xl">
           <img src="<%= p.image %>" class="h-full object-contain">
@@ -125,10 +128,12 @@
         </p>
 
       </div>
-    <% }) %>
+    </a>
 
-  </div>
+  <% }) %>
+
 </div>
+
 
 <!-- SCRIPT -->
 <script>
